--- a/styleLucila.css
+++ b/styleLucila.css
@@ -4,10 +4,17 @@ h1{
 }
 body{
     background-color: goldenrod;
-    text-align: center;
+    text-align: justify;
     font-size: 20px;
 }
 img{
     width: 30%;
     height: auto;
+    margin-left: 35%;
+}
+ol{
+    background-color: aquamarine;
+    width: 10%;
+    border-radius: 5px;
+    font-weight: bold;  
 }
