--- a/styleLucila.css
+++ b/styleLucila.css
@@ -18,3 +18,12 @@ ol{
     border-radius: 5px;
     font-weight: bold;  
 }
+table{
+    border: 1px solid black;
+    background-color: khaki;
+    font-style: italic;
+}
+td{
+    width: 10%;
+    text-align: center;
+}
