Lista desordenada y cambio de fondo

--- a/styleLucila.css
+++ b/styleLucila.css
@@ -12,8 +12,8 @@ img{
     height: auto;
     margin-left: 35%;
 }
-ol{
-    background-color: aquamarine;
+ul{
+    background-color: khaki;
     width: 10%;
     border-radius: 5px;
     font-weight: bold;  
